# animal_etl

./: README.md  pyproject.toml
.github/workflows/: ci.yml
animal_etl/: api.py  etl.py  main.py  utils.py
tests/: test_utils.py
