[tool.poetry]
name = "animal_etl"
version = "0.1.0"
description = "ETL pipeline for transforming and posting animal data"
authors = ["Zaheer Farman <zaheerfarman50@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31"
tenacity = "^8.2"
python-dateutil = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
flake8 = "^6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
